<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:id="@+id/txtDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/description_name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_frequency"
        android:id="@+id/lblInterval"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/txtDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:id="@+id/intervalRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblInterval"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">
        <RadioButton
            android:id="@+id/i1"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_minute"
            android:onClick="onRadioButtonClicked">
        </RadioButton>
        <RadioButton
            android:id="@+id/i5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_minutes"
            android:onClick="onRadioButtonClicked">
        </RadioButton>
        <RadioButton
            android:id="@+id/i15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifteen_minutes"
            android:onClick="onRadioButtonClicked">
        </RadioButton>
    </RadioGroup>
    <TextView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/message_no"
        android:id="@+id/txtBroadcast"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/intervalRadioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="30sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tracking_is_off"
            android:id="@+id/buttonBroad"
            android:layout_weight="1"
            android:height="50dip"
            android:textColor="#777777"
            android:textSize="30dp"
            android:textStyle="bold"
            />
    </LinearLayout>

</RelativeLayout>